[tool.poetry]
name = "wakingup"
version = "0.1.0"
description = ""
authors = ["GasStationManager"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.60.5"
jsonlines = "^4.0.0"
pantograph = { file = "LeanTool/PyPantograph/dist/pantograph-0.2.25-cp310-cp310-manylinux_2_31_x86_64.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
